package com.weather.app.testtags

object TestTags {
    const val ClearIcon = "ClearIcon"
    const val RecentLocationsText = "RecentLocationsText"
    const val SearchField = "SearchField"
    const val Reload = "Reload"
    const val SnackBar = "SnackBar"
    const val NoDataFound = "NoDataFound"
    const val IconBack = "IconBack"
    const val IconSearch = "IconSearch"
    const val DarkModeImageTag = "DarkModeImage"
    const val LightModeImageTag = "LightModeImage"
    const val CustomSwitch = "CustomSwitch"
}